allow passing multiple clusters to the eval launch script

--- a/scripts/ai2/beaker_eval_base.yaml
+++ b/scripts/ai2/beaker_eval_base.yaml
@@ -43,4 +43,4 @@ tasks:
     gpuCount: {{.Env.GPUS}}
     sharedMemory: {{.Env.SHARED_MEMORY}}
   constraints:
-    cluster: [{{.Env.CLUSTER}}]
+    cluster: [{{.Env.CLUSTERS}}]
